# zipper

./: CMakeLists.txt  LICENSE  README.md
cmake/: tools-compilers.cmake
meschach/: CMakeLists.txt
source/: CMakeLists.txt  clip.c  clip.h  close_match.c  closest.c  consensus.c  consensus.h  cyfile.c  cyfile.h  draw.c  draw.h  edges.c  edges.h  err.h  fill.c  fill.h  help.c  intersect.c  intersect.h  invert.c  machine.h  match_parallel.c  matrix.c  matrix.h  matrix1.h  matrix2.h  mesh.c  mesh.h  meshops.c  meshops.h  myalloc.c  myalloc.h  near.c  near.h  ply.c  ply.h  ply_wrapper.c  ply_wrapper.h  plyfile.c  polyfile.c  (+19 more)
